fix vertical alignment

--- a/src/zip-manager/styles/Dialog.css
+++ b/src/zip-manager/styles/Dialog.css
@@ -37,6 +37,7 @@ dialog select {
     100% - 2 *
       (var(--gap-inline-size) + var(--border-width) + var(--outline-width))
   );
+  align-self: end;
 }
 
 dialog form,
